--- a/preprocessing_data/process_raw_data.ipynb
+++ b/preprocessing_data/process_raw_data.ipynb
@@ -2,91 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pdfplumber\n",
-      "  Downloading pdfplumber-0.11.4-py3-none-any.whl.metadata (41 kB)\n",
-      "Collecting pdfminer.six==20231228 (from pdfplumber)\n",
-      "  Downloading pdfminer.six-20231228-py3-none-any.whl.metadata (4.2 kB)\n",
-      "Collecting Pillow>=9.1 (from pdfplumber)\n",
-      "  Downloading pillow-10.4.0-cp312-cp312-win_amd64.whl.metadata (9.3 kB)\n",
-      "Collecting pypdfium2>=4.18.0 (from pdfplumber)\n",
-      "  Downloading pypdfium2-4.30.0-py3-none-win_amd64.whl.metadata (48 kB)\n",
-      "Collecting charset-normalizer>=2.0.0 (from pdfminer.six==20231228->pdfplumber)\n",
-      "  Downloading charset_normalizer-3.3.2-cp312-cp312-win_amd64.whl.metadata (34 kB)\n",
-      "Collecting cryptography>=36.0.0 (from pdfminer.six==20231228->pdfplumber)\n",
-      "  Downloading cryptography-43.0.1-cp39-abi3-win_amd64.whl.metadata (5.4 kB)\n",
-      "Collecting cffi>=1.12 (from cryptography>=36.0.0->pdfminer.six==20231228->pdfplumber)\n",
-      "  Downloading cffi-1.17.1-cp312-cp312-win_amd64.whl.metadata (1.6 kB)\n",
-      "Collecting pycparser (from cffi>=1.12->cryptography>=36.0.0->pdfminer.six==20231228->pdfplumber)\n",
-      "  Downloading pycparser-2.22-py3-none-any.whl.metadata (943 bytes)\n",
-      "Downloading pdfplumber-0.11.4-py3-none-any.whl (59 kB)\n",
-      "Downloading pdfminer.six-20231228-py3-none-any.whl (5.6 MB)\n",
-      "   ---------------------------------------- 0.0/5.6 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 5.6/5.6 MB 48.7 MB/s eta 0:00:00\n",
-      "Downloading pillow-10.4.0-cp312-cp312-win_amd64.whl (2.6 MB)\n",
-      "   ---------------------------------------- 0.0/2.6 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 2.6/2.6 MB 143.3 MB/s eta 0:00:00\n",
-      "Downloading pypdfium2-4.30.0-py3-none-win_amd64.whl (2.9 MB)\n",
-      "   ---------------------------------------- 0.0/2.9 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 2.9/2.9 MB 84.8 MB/s eta 0:00:00\n",
-      "Downloading charset_normalizer-3.3.2-cp312-cp312-win_amd64.whl (100 kB)\n",
-      "Downloading cryptography-43.0.1-cp39-abi3-win_amd64.whl (3.1 MB)\n",
-      "   ---------------------------------------- 0.0/3.1 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 3.1/3.1 MB 59.8 MB/s eta 0:00:00\n",
-      "Downloading cffi-1.17.1-cp312-cp312-win_amd64.whl (181 kB)\n",
-      "Downloading pycparser-2.22-py3-none-any.whl (117 kB)\n",
-      "Installing collected packages: pypdfium2, pycparser, Pillow, charset-normalizer, cffi, cryptography, pdfminer.six, pdfplumber\n",
-      "Successfully installed Pillow-10.4.0 cffi-1.17.1 charset-normalizer-3.3.2 cryptography-43.0.1 pdfminer.six-20231228 pdfplumber-0.11.4 pycparser-2.22 pypdfium2-4.30.0\n",
-      "Requirement already satisfied: openai in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.50.2)\n",
-      "Requirement already satisfied: anyio<5,>=3.5.0 in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from openai) (4.6.0)\n",
-      "Requirement already satisfied: distro<2,>=1.7.0 in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from openai) (1.9.0)\n",
-      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from openai) (0.27.2)\n",
-      "Requirement already satisfied: jiter<1,>=0.4.0 in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from openai) (0.5.0)\n",
-      "Requirement already satisfied: pydantic<3,>=1.9.0 in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from openai) (2.9.2)\n",
-      "Requirement already satisfied: sniffio in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from openai) (1.3.1)\n",
-      "Requirement already satisfied: tqdm>4 in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from openai) (4.66.5)\n",
-      "Requirement already satisfied: typing-extensions<5,>=4.11 in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from openai) (4.12.2)\n",
-      "Requirement already satisfied: idna>=2.8 in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
-      "Requirement already satisfied: certifi in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (2024.8.30)\n",
-      "Requirement already satisfied: httpcore==1.* in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (1.0.5)\n",
-      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
-      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
-      "Requirement already satisfied: pydantic-core==2.23.4 in c:\\users\\esdra\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (2.23.4)\n",
-      "Requirement already satisfied: colorama in c:\\users\\esdra\\appdata\\roaming\\python\\python312\\site-packages (from tqdm>4->openai) (0.4.6)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install pdfplumber\n",
-    "!pip install openai"
+    "# !pip install pdfplumber\n",
+    "# !pip install openai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-adaptacao-climatica-nacional.txt\n",
-      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-climatica-agro.txt\n",
-      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-climatica-curitiba.txt\n",
-      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-climatica-federal.txt\n",
-      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-climatica-itabirito.txt\n",
-      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-climatica-joao-pessoa.txt\n",
-      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-climatica-sp-regiao.txt\n",
-      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-enfrentamento-mudanca-climatica-nacional.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pdfplumber\n",
     "from pathlib import Path\n",
@@ -139,6 +67,84 @@
     "    input_pdf_directory = data_path / 'raw'\n",
     "    output_text_directory = data_path / 'processed'\n",
     "    extract_text_from_pdfs_in_directory(input_pdf_directory, output_text_directory)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "metadata_pdfs = {\n",
+    "    'nacional': {'filename': \"plano-acao-adaptacao-climatica-nacional.pdf\", 'start_page' : 6},\n",
+    "    'agro': {'filename' : \"plano-acao-climatica-agro.pdf\", 'start_page' : 20},\n",
+    "    'curitiba' : {'filename' : 'plano-acao-climatica-curitiba.pdf', \"start_page\" : 16},\n",
+    "    'federal' : {'filename': 'plano-acao-climatica-federal.pdf', 'start_page' : 31},\n",
+    "    'itabirito' : {'filename' : 'plano-acao-climatica-itabirito.pdf', \"start_page\" : 19},\n",
+    "    'joao_pessoa' : {'filename' : \"plano-acao-climatica-joao-pessoa.pdf\", \"start_page\" : 14},\n",
+    "    'sao_paulo' : {'filename' : \"plano-acao-climatica-sp-regiao.pdf\", \"start_page\" : 11}, \n",
+    "    'enfretamento' : {'filename' : 'plano-enfrentamento-mudanca-climatica-nacional.pdf', \"start_page\" : 1} \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_text_from_pdf(pdf_path: Path, output_txt_path: Path, start_page : int = 1):\n",
+    "    try:\n",
+    "        with pdfplumber.open(pdf_path) as pdf:\n",
+    "            full_text = \"\"\n",
+    "            for page_number, page in enumerate(pdf.pages[start_page-1:], start=1):\n",
+    "                # Extract text from the current page\n",
+    "                text = page.extract_text()\n",
+    "                if text:\n",
+    "                    # Optionally, add page breaks or headers\n",
+    "                    full_text += f\"\\n\\n--- Page {page_number} ---\\n\\n\"\n",
+    "                    full_text += text\n",
+    "            # Write the extracted text to the output file\n",
+    "            output_txt_path.write_text(full_text, encoding='utf-8')\n",
+    "        print(f\"Text successfully extracted to {output_txt_path}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred while processing {pdf_path.name}: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-adaptacao-climatica-nacional.txt\n",
+      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-climatica-agro.txt\n",
+      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-climatica-curitiba.txt\n",
+      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-climatica-federal.txt\n",
+      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-climatica-itabirito.txt\n",
+      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-climatica-joao-pessoa.txt\n",
+      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-acao-climatica-sp-regiao.txt\n",
+      "Text successfully extracted to c:\\Users\\esdra\\Documents\\BCG_Challenge\\data\\processed\\plano-enfrentamento-mudanca-climatica-nacional.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_path = Path().cwd().parent / 'data'\n",
+    "input_pdf_directory = data_path / 'raw'\n",
+    "output_text_directory = data_path / 'processed'\n",
+    "\n",
+    "output_text_directory.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for nome, metadata in metadata_pdfs.items():\n",
+    "    txt_filename = metadata['filename'][:-4] + '.txt'\n",
+    "    output_txt_path = output_text_directory / txt_filename\n",
+    "    extract_text_from_pdf(input_pdf_directory / metadata['filename'], output_txt_path, start_page = metadata['start_page'])\n",
+    "\n",
+    "\n"
    ]
   },
   {
