--- a/src/data_science/LLM-PART1.ipynb
+++ b/src/data_science/LLM-PART1.ipynb
@@ -23103,8 +23103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del_command = \"DELETE FROM embeddings\"  # Make sure to include the 'FROM' clause in your DELETE statement\n",
-    "\n",
+    "del_command = \"DELETE FROM embeddings\"  \n",
     "conn.autocommit = True\n",
     "cur = conn.cursor()\n",
     "\n",
