organizaçao do repo e scripts de setup

--- a/data_science/LLM-PART1.ipynb
+++ b/data_science/LLM-PART1.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv(\"openai\")\n",
+    "load_dotenv()\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
     "client = OpenAI(api_key=OPENAI_API_KEY)"
    ]
